Revise VERSION and CHANGELOG #48 Little changes to build.gradle