@@ -34,7 +34,7 @@ ext {
     startDateTimeString = new Date().format("yyyy-MM-dd_HH-mm-ss")
     versionInfoFileDir = new File(sourceSets.main.output.resourcesDir, 'org/terasology/launcher/version')
     versionInfoFile = new File(versionInfoFileDir, 'versionInfo.properties')
-    currentStableDisplayVersion = "0.3.0"
+    currentStableDisplayVersion = "0.4.0"
     displayVersion = (env.JOB_NAME == 'TerasologyLauncherStable') ? currentStableDisplayVersion : ((env.JOB_NAME != null && env.BUILD_ID != null) ? currentStableDisplayVersion + ' (' + env.JOB_NAME + ', ' + env.BUILD_ID + ')' : currentStableDisplayVersion + ' (local development)')
 
     // Splash image for the JAR
@@ -60,14 +60,6 @@ dependencies {
 sourceCompatibility = 1.7
 
 mainClassName = "org.terasology.launcher.TerasologyLauncher"
-
-test {
-    // ignoreFailures: Specifies whether the build should break when the verifications performed by this task fail.
-    ignoreFailures = true
-    // showStandardStreams: makes the standard streams (err and out) visible at console when running tests
-    testLogging.showStandardStreams = true
-    jvmArgs '-Xms512m', '-Xmx1024m', '-XX:MaxPermSize=128m'
-}
 
 checkstyle {
     ignoreFailures = true
